--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 _integration/.sass-cache/*
 _integration/node_modules/*
 _integration/npm-debug.log
-_integration/js/libs/*
+_integration/librairies/*
